# neural_collision

./: README.md
collision/: CMakeLists.txt  package.xml
collision/include/collision/: datapoint.hpp  get_collision.hpp
collision/src/: get_collision.cpp  main.cpp  ola.cpp  ola.h
collision_lib/: CMakeLists.txt  package.xml
collision_lib/include/collision_lib/: collision_lib.hpp
collision_lib/src/: collision_lib.cpp
ros2-tiny-cuda-nn/: tiny-cuda-nn-extras.cmake
